Fixes to svg responsiveness & fadeIn effects

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -73,4 +73,16 @@ nav {
   	}
 }
 
+@media all and (max-width: 500px) {
+	.navItem {
+	  	padding: 1.5rem 1.3rem 0.6rem 1.3rem;
+	  	a {
+	  		font-size: 1.8rem;
+	  	}
+	}
+	.navHome {
+		padding: 0.2rem 1.3rem;
+	}
+}
+
 // end of nav styles
