--- a/css/_intro.scss
+++ b/css/_intro.scss
@@ -18,9 +18,6 @@
 	width: 100%;
 	top: 0;
 	left: 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 }
 
 .svgHeader {
@@ -32,32 +29,42 @@
 		animation: fadeInNames 4s ease;
 	}
 	.svgHeaderText-vesna {
-		padding: 0.6rem 0 0 1.8rem;
+		padding: 0.4rem 0 0 1.8rem;
 	}
 	.svgHeaderText-jocic {
 		text-align: right;
-		padding: 0 1.8rem 1rem 0;
+		padding: 0 1.8rem 0.2rem 0;
 	}
 }
 
 .svgNav {
 	width: 100%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
 	display: flex;
 	flex-direction: row;
 	text-align: right;
 	.svgNavItem {
 		width: 25%;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
 		animation: fadeInNav 5s ease;
 		a {
 			display: block;
-			margin: 0 1.4rem 0 0;
+			margin: 0 1.4rem 0.6rem 0;
 			font-size: 2rem;
-			line-height: 2;
 		}
 		p {
 			margin: 0;
 		}
 	}
+}
+
+#svgIntroMed,
+#svgIntroSm {
+	display: none;
 }
 
 // media queries
@@ -66,18 +73,56 @@
 	.svgHeader h1 {
 		font-size: 5rem;
 	}
+	.svgHeader .svgHeaderText-vesna {
+		padding: 0.4rem 0 0 1.5rem;
+	}
+	.svgHeader .svgHeaderText-jocic {
+		text-align: right;
+		padding: 0 1.2rem 0.2rem 0;
+	}
 }
 
 @media all and (max-width: 1100px) {
+	#svgIntroLg {
+		display: none;
+	}
+	#svgIntroMed {
+		display: block;
+	}
 	.svgHeader h1 {
 		font-size: 4rem;
 	}
 }
 
-// @media all and (max-width: 1000px) {
-// 	#svgIntroLg {
-// 		display: none;
-// 	}
-// }
+@media all and (max-width: 800px) {
+	.svgHeader h1 {
+		font-size: 3.5rem;
+	}
+}
+
+@media all and (max-width: 600px) {
+	#svgIntroMed {
+		display: none;
+	}
+	#svgIntroSm {
+		display: block;
+	}
+	.svgNav {
+		flex-wrap: wrap;
+		.svgNavItem {
+			width: 50%;
+		}
+	}
+}
+
+@media all and (max-width: 500px) {
+	span.esna,
+	span.ocic {
+		display: none;
+	}
+	.svgNav .svgNavItem a {
+		font-size: 1.8rem;
+	}
+}
 
 // end of intro section styles
