--- a/css/_work.scss
+++ b/css/_work.scss
@@ -13,9 +13,10 @@
 	background: $white90;
 	border: 2px solid $tangerine;
 	margin-bottom: 10rem;
-	&:last-child {
-		margin-bottom: 0;
-	}
+}
+
+.wrapperWork3 {
+	margin-bottom: 0;
 }
 
 .workImg {
