--- a/css/main.css
+++ b/css/main.css
@@ -212,6 +212,10 @@ a:focus {
   -webkit-transition: fill 0.2s ease;
           transition: fill 0.2s ease; }
 
+@media all and (max-width: 500px) {
+  h2 {
+    font-size: 1.8rem; } }
+
 html {
   font-size: 10px;
   font-family: 'Montserrat', sans-serif; }
@@ -345,6 +349,14 @@ nav {
   .navWork {
     border-right: 2px solid #ff9163; } }
 
+@media all and (max-width: 500px) {
+  .navItem {
+    padding: 1.5rem 1.3rem 0.6rem 1.3rem; }
+    .navItem a {
+      font-size: 1.8rem; }
+  .navHome {
+    padding: 0.2rem 1.3rem; } }
+
 .sectionIntro {
   height: 100vh;
   display: -webkit-box;
@@ -373,20 +385,7 @@ nav {
   position: absolute;
   width: 100%;
   top: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
+  left: 0; }
 
 .svgHeader {
   display: -webkit-box;
@@ -407,13 +406,16 @@ nav {
     -webkit-animation: fadeInNames 4s ease;
             animation: fadeInNames 4s ease; }
   .svgHeader .svgHeaderText-vesna {
-    padding: 0.6rem 0 0 1.8rem; }
+    padding: 0.4rem 0 0 1.8rem; }
   .svgHeader .svgHeaderText-jocic {
     text-align: right;
-    padding: 0 1.8rem 1rem 0; }
+    padding: 0 1.8rem 0.2rem 0; }
 
 .svgNav {
   width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -426,23 +428,71 @@ nav {
   text-align: right; }
   .svgNav .svgNavItem {
     width: 25%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     -webkit-animation: fadeInNav 5s ease;
             animation: fadeInNav 5s ease; }
     .svgNav .svgNavItem a {
       display: block;
-      margin: 0 1.4rem 0 0;
-      font-size: 2rem;
-      line-height: 2; }
+      margin: 0 1.4rem 0.6rem 0;
+      font-size: 2rem; }
     .svgNav .svgNavItem p {
       margin: 0; }
 
+#svgIntroMed,
+#svgIntroSm {
+  display: none; }
+
 @media all and (max-width: 1200px) {
   .svgHeader h1 {
-    font-size: 5rem; } }
+    font-size: 5rem; }
+  .svgHeader .svgHeaderText-vesna {
+    padding: 0.4rem 0 0 1.5rem; }
+  .svgHeader .svgHeaderText-jocic {
+    text-align: right;
+    padding: 0 1.2rem 0.2rem 0; } }
 
 @media all and (max-width: 1100px) {
+  #svgIntroLg {
+    display: none; }
+  #svgIntroMed {
+    display: block; }
   .svgHeader h1 {
     font-size: 4rem; } }
+
+@media all and (max-width: 800px) {
+  .svgHeader h1 {
+    font-size: 3.5rem; } }
+
+@media all and (max-width: 600px) {
+  #svgIntroMed {
+    display: none; }
+  #svgIntroSm {
+    display: block; }
+  .svgNav {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+    .svgNav .svgNavItem {
+      width: 50%; } }
+
+@media all and (max-width: 500px) {
+  span.esna,
+  span.ocic {
+    display: none; }
+  .svgNav .svgNavItem a {
+    font-size: 1.8rem; } }
 
 .sectionAbout {
   background: rgba(230, 230, 230, 0.9); }
@@ -692,8 +742,9 @@ nav {
   background: rgba(255, 255, 255, 0.9);
   border: 2px solid #ff9163;
   margin-bottom: 10rem; }
-  .wrapperWork:last-child {
-    margin-bottom: 0; }
+
+.wrapperWork3 {
+  margin-bottom: 0; }
 
 .workImg {
   width: 37.5%;
