Fixed workExtraButton fadeIn effect

--- a/css/_work.scss
+++ b/css/_work.scss
@@ -226,6 +226,7 @@
 	}
 	.workExtraButton {
 		display: block;
+		opacity: 0;
 		border: 2px solid $tangerine;
 		border-top: none;
 		margin-bottom: 10rem;
