--- a/css/main.css
+++ b/css/main.css
@@ -997,6 +997,7 @@ nav {
     display: none; }
   .workExtraButton {
     display: block;
+    opacity: 0;
     border: 2px solid #ff9163;
     border-top: none;
     margin-bottom: 10rem; }
